# Advent-Of-Code

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
2015/: 1.py  2.py  3.py  4.py  5.py  6.py  Makefile
2015/aoc/: __init__.py
2015/aoc/d01/: __init__.py  main.py
2015/aoc/d02/: __init__.py  main.py
2015/aoc/d03/: main.py
2015/aoc/d05/: __init__.py  main.py
2015/data/d01/: example_10.txt  example_11.txt  example_12.txt  example_13.txt  example_14.txt  example_15.txt  example_16.txt  example_17.txt  example_18.txt  example_20.txt  example_21.txt
2015/data/d02/: example_10.txt  example_11.txt  example_20.txt  example_21.txt
2015/data/d03/: example_10.txt  example_11.txt  example_12.txt  example_20.txt  example_21.txt  example_22.txt
2015/data/d05/: example_10.txt  example_20.txt
2015/tests/aoc/: test_base.py  test_d01.py  test_d02.py  test_d03.py  test_d05.py
2021/: 1.py  2.py  3.py  Makefile
2021/aoc/: __init__.py
2021/aoc/d01/: main.py
2021/aoc/d02/: main.py
2021/aoc/d03/: __init__.py  main.py
2021/aoc/d04/: main.py
2021/data/d01/: example_10.txt  example_20.txt
2021/data/d02/: example_01.txt  example_02.txt
2021/data/d03/: example_02.txt  example_20.txt
2021/data/d04/: example_10.txt  example_20.txt
2021/tests/aoc/: test_d01.py  test_d02.py  test_d03.py  test_d04.py
2022/: 1.py  2.py  3.py  Makefile
2022/aoc/: __init__.py
2022/aoc/d01/: main.py
legacy/: main.py
legacy/2015/: 2.py  3.py  4.py
legacy/2021/: 1.py
legacy/2022/: 2.py  3.py
(+91 files in other folders)
